--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -10,16 +10,21 @@
     <script src="/js/index.js" defer></script>
 
   </head>
+
   <body>
+
     <main class="container">
+
       <figure class="logoDH">
         <img src="/img/logo-DH.png" alt="Logo Digital House">
       </figure>
+
       <section class="contenido">
         <h1 class="tituloPrincipal"><%= title %></h1>
-        <h2 class="subtitulo">Bienvenido </h2>
+        <h2 class="subtitulo">Bienvenid@-</h2>
         <h2><a  href="/movies">Listado de Películas</a></h2>
       </section>
+
       <br><br>
       <section class="informacion">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla natus ipsum minima ducimus possimus quo, nam debitis odit molestiae unde doloribus temporibus dolorum soluta, fugit quasi nesciunt dolorem rem incidunt.</p>
@@ -27,6 +32,8 @@
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae reprehenderit ea asperiores, maxime quasi deserunt et distinctio praesentium ex numquam, odit molestias animi, sunt dicta consequatur. Itaque mollitia labore aliquid.</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A culpa facere ipsum quia perferendis unde aliquid obcaecati qui voluptate, in est aut minima quas sunt dolores. Eligendi harum reprehenderit impedit.</p>
       </section>
+
     </main>
+
   </body>
 </html>
