--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -21,7 +21,7 @@
 
       <section class="contenido">
         <h1 class="tituloPrincipal"><%= title %></h1>
-        <h2 class="subtitulo">Bienvenid@-</h2>
+        <h2 class="subtitulo">Bienvenid@</h2>
         <h2><a  href="/movies">Listado de Películas</a></h2>
       </section>
 
